--- a/index.html
+++ b/index.html
@@ -12,19 +12,33 @@
         <div class= "textos-hero">
         <h1>Bienvenido a Colombia Tours & Travel</h1>
         <p> Creamos la mejor experiencia en tus viajes</p>
-        <h2>Registro</h2>
     </div>
     <div style="height: 150px; overflow: hidden;" ><svg viewBox="0 0 500 150" preserveAspectRatio="none" style="height: 100%; width: 100%;"><path d="M0.00,49.98 C278.49,190.95 206.26,-97.20 413.37,73.52 L500.00,150.00 L0.00,150.00 Z" style="stroke: none; fill: #08f;"></path></svg></div>
     </header>
     <section class="form-register">
-        <h4>Formulario registro</h4>
-        <input class="controls" type="text" name="Nombres" id="Nombres" placeholder="Ingrese su Nombre">
-        <input class="controls" type="text" name="Apellidos" id="Apellidos" placeholder="Ingrese su Apellido">
-        <input class="controls" type="email" name="Correo" id="Correo" placeholder="Ingrese su Correo">
-        <input class="controls" type="password" name="Contraseña" id="Contraseña" placeholder="Ingrese su Contraseña">
-        <p>Estoy de acuerdo con <a href="#">Terminos y Condiciones</a></p>
-        <input class="botons" type="submit" value="Registrar">
-        <p><a href="#">¿Ya tengo Cuenta?</a></p>
+        <fieldset>
+        <h2>Registro</h2>
+        </fieldset>
+        <form action="">
+            <fieldset>
+    <label for="Usuario">Username
+    <input type= "textos-hero" id="Usuario" >
+    </label>
+    <br><br>
+    <label for="clave">Contraseña
+        <input type="password">
+    </label>
+    <br><br>
+    <label for="Pregunta">Pregunta de Seguridad
+        <input type="text">
+    <br><br>
+    <label for="Respuesta">Respuesta de Seguridad
+        <input type="text">
+    </label>
+    </fieldset>
+    </label>
+</form>
+
     </section>
 
     </body>
