--- a/index.html
+++ b/index.html
@@ -35,8 +35,12 @@
     <label for="Respuesta">Respuesta de Seguridad
         <input type="text">
     </label>
+    <br><br>
+        <input type="submit" value="Registrar">
+    <br><br>
+    <input type="submit" value="Login">
+
     </fieldset>
-    </label>
 </form>
 
     </section>
