--- a/index.html
+++ b/index.html
@@ -5,16 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Colombia Tours & Travel</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="estilos.css">
 </head>
 <body>
+<fieldset>
     <header class= "hero">
         <div class= "textos-hero">
         <h1>Bienvenido a Colombia Tours & Travel</h1>
         <p> Creamos la mejor experiencia en tus viajes</p>
+        <img src="logo.png.png"> 
+    </fieldset>
     </div>
-    <div style="height: 150px; overflow: hidden;" ><svg viewBox="0 0 500 150" preserveAspectRatio="none" style="height: 100%; width: 100%;"><path d="M0.00,49.98 C278.49,190.95 206.26,-97.20 413.37,73.52 L500.00,150.00 L0.00,150.00 Z" style="stroke: none; fill: #08f;"></path></svg></div>
-    </header>
+        </header>
     <section class="form-register">
         <fieldset>
         <h2>Registro</h2>
